--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://timetable-backend-c7it.onrender.com/api",
+  "proxy": "",
   "devDependencies": {
     "react-scripts": "^5.0.1",
     "webpack": "^5.98.0"
